RESOLVED FIXED247885
[Safari 16 regression] service worker download does not work in case of preloads
https://bugs.webkit.org/show_bug.cgi?id=247885
Summary [Safari 16 regression] service worker download does not work in case of preloads
youenn fablet
Reported 2022-11-14 02:35:55 PST
[Safari 16 regression] service worker download does not work in case of preloads
Attachments
youenn fablet
Comment 1 2022-11-14 02:36:03 PST
Radar WebKit Bug Importer
Comment 2 2022-11-14 02:36:25 PST
youenn fablet
Comment 3 2022-11-14 03:49:49 PST
EWS
Comment 4 2022-11-16 06:14:10 PST
Committed 256731@main (daf8b0ba46a8): <https://commits.webkit.org/256731@main> Reviewed commits have been landed. Closing PR #6468 and removing active labels.
Steffen Weber
Comment 5 2022-11-16 06:28:34 PST
Thank you! May I ask in which Safari release this fix will appear? Any chance to get the fix earlier than Safari 17 in March / April 2023?
youenn fablet
Comment 6 2022-11-16 07:37:21 PST
(In reply to Steffen Weber from comment #5) > Thank you! > > May I ask in which Safari release this fix will appear? Any chance to get > the fix earlier than Safari 17 in March / April 2023? We usually do not comment on schedule. Given this bug is a regression, we usually process it with higher priority than regular bugs. Changing to P1.
Note You need to log in before you can comment on or make changes to this bug.