Cherry-pick daf8b0ba46a8. rdar://problem/102312723

[Safari 16 regression] service worker download does not work in case of preloads
    https://bugs.webkit.org/show_bug.cgi?id=247885
    rdar://problem/102312723

    Reviewed by Alex Christensen and Geoffrey Garen.

    When a fetch is converted to download and is served from a service worker that uses a preload, we should use that preload.

    * LayoutTests/http/wpt/service-workers/fetch-service-worker-preload-use-download.https-expected.txt: Added.
    * LayoutTests/http/wpt/service-workers/fetch-service-worker-preload-use-download.https.html: Added.
    * LayoutTests/http/wpt/service-workers/fetch-service-worker-preload-use-download-and-clone.https-expected.txt: Added.
    * LayoutTests/http/wpt/service-workers/fetch-service-worker-preload-use-download-and-clone.https.html: Added.
    * LayoutTests/http/wpt/service-workers/fetch-service-worker-preload-worker.js:
    (event.event.request.url.includes): Deleted.
    * LayoutTests/platform/glib/TestExpectations:
    * LayoutTests/platform/ios-wk2/http/wpt/service-workers/fetch-service-worker-preload-use-download-and-clone.https-expected.txt: Added.
    * LayoutTests/platform/ios-wk2/http/wpt/service-workers/fetch-service-worker-preload-use-download.https-expected.txt: Added.
    * Source/WebKit/NetworkProcess/ServiceWorker/ServiceWorkerFetchTask.cpp:
    (WebKit::ServiceWorkerFetchTask::convertToDownload):

    Canonical link: https://commits.webkit.org/256731@main

Canonical link: https://commits.webkit.org/252432.858@safari-7614-branch